--- a/index.html
+++ b/index.html
@@ -3,30 +3,120 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Mario Shop - Colorful 3D Design</title>
+    <title>Mario Shop - Puff 30k Collection</title>
     <link rel="stylesheet" href="style.css">
     <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@400;600&display=swap" rel="stylesheet">
 </head>
 <body>
     <header>
         <div class="container">
-            <h1 class="title">Welcome to Mario Shop</h1>
-            <p class="tagline">Discover our colorful collection of products with the best prices!</p>
+            <h1 class="title">Welcome to Mario Shop - Puff 30k Collection</h1>
+            <p class="tagline">Discover our colorful collection of Puffs 30k with the best prices!</p>
         </div>
     </header>
 
     <main>
+        <!-- Video Section -->
+        <section class="video-section">
+            <div class="container">
+                <h2>Product Video - Puff 30k</h2>
+                <video controls class="product-video">
+                    <source src="https://i.imgur.com/CTKXAsc.mp4" type="video/mp4">
+                    Your browser does not support the video tag.
+                </video>
+                <p class="video-description">Bang 30k Puffs Double Taste Disposable Vape. Cutting-edge device designed for the ultimate vaping pleasure. With an incredible 30,000 puffs, this disposable vape pen ensures long-lasting use, making it a perfect choice for avid vapers.</p>
+            </div>
+        </section>
+
+        <!-- Products Section -->
         <section class="products">
             <div class="container">
-                <h2>Our Popular Products</h2>
+                <h2>Our Popular Puff 30k Products</h2>
+
+                <!-- Start Product List -->
                 <div class="product-card">
+                    <h3>Flavor 1: Watermelon Ice / Blueberry Mint</h3>
                     <div class="product-img"></div>
-                    <h3>Product Name</h3>
-                    <p class="product-desc">This is a colorful description of a product that is very attractive.</p>
-                    <a href="#" class="buy-button">Buy Now</a>
+                    <p class="product-desc">Enjoy a refreshing mix of Watermelon Ice and Blueberry Mint.</p>
+                    <a href="https://buy.stripe.com/7sI7uL6MU4Zdd68cMM" class="buy-button">Buy Now</a>
                 </div>
 
-                <!-- Duplicate product-card as needed for more products -->
+                <div class="product-card">
+                    <h3>Flavor 2: Blueberry Raspberry / Mixed Mouldy Fruit</h3>
+                    <div class="product-img"></div>
+                    <p class="product-desc">A unique combination of Blueberry Raspberry with Mixed Mouldy Fruit.</p>
+                    <a href="https://buy.stripe.com/6oEaGXgnu77laY0dQR" class="buy-button">Buy Now</a>
+                </div>
+
+                <div class="product-card">
+                    <h3>Flavor 3: Strawberry Kiwi / Peach Ice</h3>
+                    <div class="product-img"></div>
+                    <p class="product-desc">Taste the delicious mix of Strawberry Kiwi and Peach Ice.</p>
+                    <a href="https://buy.stripe.com/8wMcP5dbi1N13vyfZ0" class="buy-button">Buy Now</a>
+                </div>
+
+                <div class="product-card">
+                    <h3>Flavor 4: Strawberry Kiwi / Sour Apple Raspberry</h3>
+                    <div class="product-img"></div>
+                    <p class="product-desc">Enjoy the tangy combination of Strawberry Kiwi and Sour Apple Raspberry.</p>
+                    <a href="https://buy.stripe.com/bIY3ev5IQdvJ8PS5kn" class="buy-button">Buy Now</a>
+                </div>
+
+                <div class="product-card">
+                    <h3>Flavor 5: Watermelon Ice / Strawberry And Mango</h3>
+                    <div class="product-img"></div>
+                    <p class="product-desc">Refreshing Watermelon Ice combined with Strawberry and Mango flavors.</p>
+                    <a href="https://buy.stripe.com/dR64iz5IQ0IX7LOaEI" class="buy-button">Buy Now</a>
+                </div>
+
+                <div class="product-card">
+                    <h3>Flavor 6: Strawberry Watermelon / Kiwi Passion Fruit Guava</h3>
+                    <div class="product-img"></div>
+                    <p class="product-desc">A sweet combination of Strawberry Watermelon and Kiwi Passion Fruit Guava.</p>
+                    <a href="https://buy.stripe.com/9AQ9CT2wEfDR8PSbIN" class="buy-button">Buy Now</a>
+                </div>
+
+                <div class="product-card">
+                    <h3>Flavor 7: Strawberry And Watermelon / Grape Ice</h3>
+                    <div class="product-img"></div>
+                    <p class="product-desc">A cool blend of Strawberry, Watermelon, and Grape Ice.</p>
+                    <a href="https://buy.stripe.com/14k6qHc7e2R52ruaEK" class="buy-button">Buy Now</a>
+                </div>
+
+                <div class="product-card">
+                    <h3>Flavor 8: Blueberry Ice / Black Dragon Ice</h3>
+                    <div class="product-img"></div>
+                    <p class="product-desc">Experience the cool mix of Blueberry Ice and Black Dragon Ice.</p>
+                    <a href="https://buy.stripe.com/cN29CTefm9ft3vy9AH" class="buy-button">Buy Now</a>
+                </div>
+
+                <div class="product-card">
+                    <h3>Flavor 9: Blueberry Ice / Strawberry and Banana</h3>
+                    <div class="product-img"></div>
+                    <p class="product-desc">A tasty mix of Blueberry Ice with Strawberry and Banana.</p>
+                    <a href="https://buy.stripe.com/aEU2ar4EMcrF4zC8wE" class="buy-button">Buy Now</a>
+                </div>
+
+                <div class="product-card">
+                    <h3>Flavor 10: Redbull / Blueberry Watermelon</h3>
+                    <div class="product-img"></div>
+                    <p class="product-desc">A flavorful blend of Redbull with Blueberry and Watermelon.</p>
+                    <a href="https://buy.stripe.com/cN29CTc7ebnBeac7sB" class="buy-button">Buy Now</a>
+                </div>
+
+                <div class="product-card">
+                    <h3>Flavor 11: Redbull / Watermelon Bubble Candy</h3>
+                    <div class="product-img"></div>
+                    <p class="product-desc">An exciting combination of Redbull with Watermelon Bubble Candy.</p>
+                    <a href="https://buy.stripe.com/7sIaGX0owajxfeg8wG" class="buy-button">Buy Now</a>
+                </div>
+
+                <div class="product-card">
+                    <h3>Flavor 12: Blueberry Raspberry / Peach Mango Watermelon</h3>
+                    <div class="product-img"></div>
+                    <p class="product-desc">Enjoy Blueberry Raspberry mixed with Peach Mango and Watermelon.</p>
+                    <a href="https://buy.stripe.com/7sI5mD7QYajx4zC00b" class="buy-button">Buy Now</a>
+                </div>
             </div>
         </section>
     </main>
