--- a/index.html
+++ b/index.html
@@ -1,121 +1,134 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Mario Shop - Puff 30k Collection</title>
+    <title>Mario Shop - Colorful 3D Design</title>
     <link rel="stylesheet" href="style.css">
     <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@400;600&display=swap" rel="stylesheet">
 </head>
+
 <body>
     <header>
         <div class="container">
-            <h1 class="title">Welcome to Mario Shop - Puff 30k Collection</h1>
-            <p class="tagline">Discover our colorful collection of Puffs 30k with the best prices!</p>
+            <h1 class="title">Welcome to Mario Shop</h1>
+            <p class="tagline">Discover our colorful collection of products with the best prices!</p>
         </div>
     </header>
 
     <main>
-        <!-- Video Section -->
         <section class="video-section">
             <div class="container">
-                <h2>Product Video - Puff 30k</h2>
-                <video controls class="product-video">
+                <h2>Product Video</h2>
+                <video class="product-video" controls>
                     <source src="https://i.imgur.com/CTKXAsc.mp4" type="video/mp4">
                     Your browser does not support the video tag.
                 </video>
-                <p class="video-description">Bang 30k Puffs Double Taste Disposable Vape. Cutting-edge device designed for the ultimate vaping pleasure. With an incredible 30,000 puffs, this disposable vape pen ensures long-lasting use, making it a perfect choice for avid vapers.</p>
+                <p class="video-description">Bang 30k Puffs Double Taste Dispo Vape - designed for the ultimate vaping pleasure. With an incredible 30,000 puffs, this disposable vape pen ensures long-lasting use, making it a perfect choice for avid vapers.</p>
             </div>
         </section>
 
-        <!-- Products Section -->
         <section class="products">
             <div class="container">
-                <h2>Our Popular Puff 30k Products</h2>
+                <h2>Our Popular Products</h2>
+                <div class="product-grid">
+                    <!-- Flavor 1 -->
+                    <div class="product-card">
+                        <img class="product-img" src="https://i.imgur.com/Zgh5DWW.jpeg" alt="Watermelon Ice / Blueberry Mint">
+                        <h3>Watermelon Ice / Blueberry Mint</h3>
+                        <p class="product-desc">Enjoy a refreshing blend of watermelon and blueberry mint.</p>
+                        <a href="https://buy.stripe.com/7sI7uL6MU4Zdd68cMM" class="buy-button">Buy Now</a>
+                    </div>
 
-                <!-- Start Product List -->
-                <div class="product-card">
-                    <h3>Flavor 1: Watermelon Ice / Blueberry Mint</h3>
-                    <div class="product-img"></div>
-                    <p class="product-desc">Enjoy a refreshing mix of Watermelon Ice and Blueberry Mint.</p>
-                    <a href="https://buy.stripe.com/7sI7uL6MU4Zdd68cMM" class="buy-button">Buy Now</a>
-                </div>
+                    <!-- Flavor 2 -->
+                    <div class="product-card">
+                        <img class="product-img" src="https://i.imgur.com/w3MQ09o.jpeg" alt="Blueberry Raspberry / Mixed Mouldy Fruit">
+                        <h3>Blueberry Raspberry / Mixed Mouldy Fruit</h3>
+                        <p class="product-desc">A unique mix of blueberry, raspberry, and exotic fruit flavors.</p>
+                        <a href="https://buy.stripe.com/6oEaGXgnu77laY0dQR" class="buy-button">Buy Now</a>
+                    </div>
 
-                <div class="product-card">
-                    <h3>Flavor 2: Blueberry Raspberry / Mixed Mouldy Fruit</h3>
-                    <div class="product-img"></div>
-                    <p class="product-desc">A unique combination of Blueberry Raspberry with Mixed Mouldy Fruit.</p>
-                    <a href="https://buy.stripe.com/6oEaGXgnu77laY0dQR" class="buy-button">Buy Now</a>
-                </div>
+                    <!-- Flavor 3 -->
+                    <div class="product-card">
+                        <img class="product-img" src="https://i.imgur.com/8s3nEwE.jpeg" alt="Strawberry Kiwi / Peach Ice">
+                        <h3>Strawberry Kiwi / Peach Ice</h3>
+                        <p class="product-desc">A delightful combination of strawberry, kiwi, and peach.</p>
+                        <a href="https://buy.stripe.com/8wMcP5dbi1N13vyfZ0" class="buy-button">Buy Now</a>
+                    </div>
 
-                <div class="product-card">
-                    <h3>Flavor 3: Strawberry Kiwi / Peach Ice</h3>
-                    <div class="product-img"></div>
-                    <p class="product-desc">Taste the delicious mix of Strawberry Kiwi and Peach Ice.</p>
-                    <a href="https://buy.stripe.com/8wMcP5dbi1N13vyfZ0" class="buy-button">Buy Now</a>
-                </div>
+                    <!-- Flavor 4 -->
+                    <div class="product-card">
+                        <img class="product-img" src="https://i.imgur.com/s72A7fW.jpeg" alt="Strawberry Kiwi / Sour Apple Raspberry">
+                        <h3>Strawberry Kiwi / Sour Apple Raspberry</h3>
+                        <p class="product-desc">A perfect blend of sweet strawberry and sour apple.</p>
+                        <a href="https://buy.stripe.com/bIY3ev5IQdvJ8PS5kn" class="buy-button">Buy Now</a>
+                    </div>
 
-                <div class="product-card">
-                    <h3>Flavor 4: Strawberry Kiwi / Sour Apple Raspberry</h3>
-                    <div class="product-img"></div>
-                    <p class="product-desc">Enjoy the tangy combination of Strawberry Kiwi and Sour Apple Raspberry.</p>
-                    <a href="https://buy.stripe.com/bIY3ev5IQdvJ8PS5kn" class="buy-button">Buy Now</a>
-                </div>
+                    <!-- Flavor 5 -->
+                    <div class="product-card">
+                        <img class="product-img" src="https://i.imgur.com/zb9WFPU.jpeg" alt="Watermelon Ice / Strawberry And Mango">
+                        <h3>Watermelon Ice / Strawberry And Mango</h3>
+                        <p class="product-desc">Cool watermelon combined with sweet strawberry and mango.</p>
+                        <a href="https://buy.stripe.com/dR64iz5IQ0IX7LOaEI" class="buy-button">Buy Now</a>
+                    </div>
 
-                <div class="product-card">
-                    <h3>Flavor 5: Watermelon Ice / Strawberry And Mango</h3>
-                    <div class="product-img"></div>
-                    <p class="product-desc">Refreshing Watermelon Ice combined with Strawberry and Mango flavors.</p>
-                    <a href="https://buy.stripe.com/dR64iz5IQ0IX7LOaEI" class="buy-button">Buy Now</a>
-                </div>
+                    <!-- Flavor 6 -->
+                    <div class="product-card">
+                        <img class="product-img" src="https://i.imgur.com/gTedAEp.jpeg" alt="Strawberry Watermelon / Kiwi Passion Fruit Guava">
+                        <h3>Strawberry Watermelon / Kiwi Passion Fruit Guava</h3>
+                        <p class="product-desc">A tropical mix with strawberry, kiwi, passion fruit, and guava.</p>
+                        <a href="https://buy.stripe.com/9AQ9CT2wEfDR8PSbIN" class="buy-button">Buy Now</a>
+                    </div>
 
-                <div class="product-card">
-                    <h3>Flavor 6: Strawberry Watermelon / Kiwi Passion Fruit Guava</h3>
-                    <div class="product-img"></div>
-                    <p class="product-desc">A sweet combination of Strawberry Watermelon and Kiwi Passion Fruit Guava.</p>
-                    <a href="https://buy.stripe.com/9AQ9CT2wEfDR8PSbIN" class="buy-button">Buy Now</a>
-                </div>
+                    <!-- Flavor 7 -->
+                    <div class="product-card">
+                        <img class="product-img" src="https://i.imgur.com/a7rRzC9.jpeg" alt="Strawberry And Watermelon / Grape Ice">
+                        <h3>Strawberry And Watermelon / Grape Ice</h3>
+                        <p class="product-desc">Refreshing mix of strawberry, watermelon, and icy grape.</p>
+                        <a href="https://buy.stripe.com/14k6qHc7e2R52ruaEK" class="buy-button">Buy Now</a>
+                    </div>
 
-                <div class="product-card">
-                    <h3>Flavor 7: Strawberry And Watermelon / Grape Ice</h3>
-                    <div class="product-img"></div>
-                    <p class="product-desc">A cool blend of Strawberry, Watermelon, and Grape Ice.</p>
-                    <a href="https://buy.stripe.com/14k6qHc7e2R52ruaEK" class="buy-button">Buy Now</a>
-                </div>
+                    <!-- Flavor 8 -->
+                    <div class="product-card">
+                        <img class="product-img" src="https://i.imgur.com/nvjOiem.jpeg" alt="Blueberry Ice / Black Dragon Ice">
+                        <h3>Blueberry Ice / Black Dragon Ice</h3>
+                        <p class="product-desc">Icy blueberry combined with mysterious black dragon fruit.</p>
+                        <a href="https://buy.stripe.com/cN29CTefm9ft3vy9AH" class="buy-button">Buy Now</a>
+                    </div>
 
-                <div class="product-card">
-                    <h3>Flavor 8: Blueberry Ice / Black Dragon Ice</h3>
-                    <div class="product-img"></div>
-                    <p class="product-desc">Experience the cool mix of Blueberry Ice and Black Dragon Ice.</p>
-                    <a href="https://buy.stripe.com/cN29CTefm9ft3vy9AH" class="buy-button">Buy Now</a>
-                </div>
+                    <!-- Flavor 9 -->
+                    <div class="product-card">
+                        <img class="product-img" src="https://i.imgur.com/3Gg5YtZ.jpeg" alt="Blueberry Ice / Strawberry and Banana">
+                        <h3>Blueberry Ice / Strawberry and Banana</h3>
+                        <p class="product-desc">A fruity blend of blueberry, strawberry, and banana.</p>
+                        <a href="https://buy.stripe.com/aEU2ar4EMcrF4zC8wE" class="buy-button">Buy Now</a>
+                    </div>
 
-                <div class="product-card">
-                    <h3>Flavor 9: Blueberry Ice / Strawberry and Banana</h3>
-                    <div class="product-img"></div>
-                    <p class="product-desc">A tasty mix of Blueberry Ice with Strawberry and Banana.</p>
-                    <a href="https://buy.stripe.com/aEU2ar4EMcrF4zC8wE" class="buy-button">Buy Now</a>
-                </div>
+                    <!-- Flavor 10 -->
+                    <div class="product-card">
+                        <img class="product-img" src="https://i.imgur.com/bPh3r09.jpeg" alt="Redbull / Blueberry Watermelon">
+                        <h3>Redbull / Blueberry Watermelon</h3>
+                        <p class="product-desc">A vibrant mix of energy drink flavor with blueberry and watermelon.</p>
+                        <a href="https://buy.stripe.com/cN29CTc7ebnBeac7sB" class="buy-button">Buy Now</a>
+                    </div>
 
-                <div class="product-card">
-                    <h3>Flavor 10: Redbull / Blueberry Watermelon</h3>
-                    <div class="product-img"></div>
-                    <p class="product-desc">A flavorful blend of Redbull with Blueberry and Watermelon.</p>
-                    <a href="https://buy.stripe.com/cN29CTc7ebnBeac7sB" class="buy-button">Buy Now</a>
-                </div>
+                    <!-- Flavor 11 -->
+                    <div class="product-card">
+                        <img class="product-img" src="https://i.imgur.com/8rWt8tX.jpeg" alt="Redbull / Watermelon Bubble Candy">
+                        <h3>Redbull / Watermelon Bubble Candy</h3>
+                        <p class="product-desc">Sweet watermelon bubble candy mixed with Redbull.</p>
+                        <a href="https://buy.stripe.com/7sIaGX0owajxfeg8wG" class="buy-button">Buy Now</a>
+                    </div>
 
-                <div class="product-card">
-                    <h3>Flavor 11: Redbull / Watermelon Bubble Candy</h3>
-                    <div class="product-img"></div>
-                    <p class="product-desc">An exciting combination of Redbull with Watermelon Bubble Candy.</p>
-                    <a href="https://buy.stripe.com/7sIaGX0owajxfeg8wG" class="buy-button">Buy Now</a>
-                </div>
+                    <!-- Flavor 12 -->
+                    <div class="product-card">
+                        <img class="product-img" src="https://i.imgur.com/BmRhpPX.jpeg" alt="Blueberry Raspberry / Peach Mango Watermelon">
+                        <h3>Blueberry Raspberry / Peach Mango Watermelon</h3>
+                        <p class="product-desc">An exotic blend of blueberry, raspberry, peach, and mango.</p>
+                        <a href="https://buy.stripe.com/7sI5mD7QYajx4zC00b" class="buy-button">Buy Now</a>
+                    </div>
 
-                <div class="product-card">
-                    <h3>Flavor 12: Blueberry Raspberry / Peach Mango Watermelon</h3>
-                    <div class="product-img"></div>
-                    <p class="product-desc">Enjoy Blueberry Raspberry mixed with Peach Mango and Watermelon.</p>
-                    <a href="https://buy.stripe.com/7sI5mD7QYajx4zC00b" class="buy-button">Buy Now</a>
                 </div>
             </div>
         </section>
@@ -127,4 +140,5 @@
         </div>
     </footer>
 </body>
+
 </html>
